[gd_scene load_steps=84 format=2]

[ext_resource path="res://Assets/Sprites/Characters/astronaut_hit.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/player_controller.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Particles/White-10x10.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Materials/lightingMat.tres" type="Material" id=4]
[ext_resource path="res://Scripts/StateMachine/state_machine.gd" type="Script" id=5]
[ext_resource path="res://Scripts/StateMachine/PlayerStates/running.gd" type="Script" id=6]
[ext_resource path="res://Scripts/StateMachine/PlayerStates/idle.gd" type="Script" id=7]
[ext_resource path="res://Scripts/StateMachine/PlayerStates/falling.gd" type="Script" id=8]
[ext_resource path="res://Scripts/StateMachine/PlayerStates/jumping.gd" type="Script" id=9]
[ext_resource path="res://Scripts/StateMachine/PlayerStates/wall_sliding.gd" type="Script" id=10]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_dead.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_slide.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_run.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_jump.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_fall.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_idle.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_land.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Characters/astronaut_walk.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 108, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 324, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 540, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 108, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 216, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 324, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 432, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 540, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 648, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 756, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 864, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 972, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1080, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1188, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1296, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1404, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1512, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1620, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1728, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1836, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1944, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 2052, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 2160, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 108, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 216, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 324, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 432, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 108, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 216, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 324, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 108, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 216, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 324, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 432, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 540, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 648, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 756, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 864, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 972, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 108, 106 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 108, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 216, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 324, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 432, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 540, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 648, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 756, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 864, 0, 108, 112 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 972, 0, 108, 112 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 27 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "land",
"speed": 10.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ SubResource( 76 ) ],
"loop": false,
"name": "slide",
"speed": 5.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.00478469, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.566406, 0.566406, 0.566406, 0.501961 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.44
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, -3, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.2
linear_accel_random = 0.15
scale = 0.25
scale_random = 0.83
color_ramp = SubResource( 4 )

[node name="Player" type="KinematicBody2D"]
material = ExtResource( 4 )
position = Vector2( 7, -13 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 4 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
use_parent_material = true
position = Vector2( 8, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Position2D"]
use_parent_material = true
position = Vector2( -8, -4 )
z_index = 10
frames = SubResource( 26 )
animation = "walk"
frame = 9
playing = true

[node name="WalkingTrail" type="Particles2D" parent="Position2D"]
position = Vector2( -25, 50 )
z_index = 1
lifetime = 0.35
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="SprintingTrail" type="Particles2D" parent="Position2D"]
position = Vector2( -25, 50 )
z_index = 1
lifetime = 0.35
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="JumpingCloud" type="Particles2D" parent="Position2D"]
position = Vector2( 0, 60 )
z_index = 1
emitting = false
amount = 16
lifetime = 2.5
one_shot = true
explosiveness = 1.0
randomness = 0.53
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="LandingCloud" type="Particles2D" parent="Position2D"]
position = Vector2( 0, 60 )
z_index = 1
emitting = false
amount = 16
lifetime = 2.5
one_shot = true
explosiveness = 1.0
randomness = 0.53
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="WallSliding" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[connection signal="animation_finished" from="Position2D/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
